<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mathString"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:ellipsize="start"
        android:gravity="end"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        tools:text="123+456"/>

    <TextView
        android:id="@+id/resString"
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:ellipsize="end"
        android:gravity="end"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textSize="70sp"
        tools:text="123456789"
        android:layout_weight="1"/>

    <GridLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="5">

        <Button
            android:id="@+id/buttonClear"
            style="@style/ActionButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/clear" />

        <Button
            android:id="@+id/buttonOpen"
            style="@style/ActionButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/open" />

        <Button
            android:id="@+id/buttonClose"
            style="@style/ActionButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/close" />

        <Button
            android:id="@+id/buttonDivide"
            style="@style/ActionButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/divide" />

        <Button
            android:id="@+id/buttonSeven"
            style="@style/NumButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/seven" />

        <Button
            android:id="@+id/buttonEight"
            style="@style/NumButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/eight" />

        <Button
            android:id="@+id/buttonNine"
            style="@style/NumButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/nine" />

        <Button
            android:id="@+id/buttonMultiply"
            style="@style/ActionButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/multiply" />

        <Button
            android:id="@+id/buttonFour"
            style="@style/NumButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/four" />

        <Button
            android:id="@+id/buttonFive"
            style="@style/NumButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/five" />

        <Button
            android:id="@+id/buttonSix"
            style="@style/NumButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/six" />

        <Button
            android:id="@+id/buttonPlus"
            style="@style/ActionButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/plus" />

        <Button
            android:id="@+id/buttonOne"
            style="@style/NumButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/one" />

        <Button
            android:id="@+id/buttonTwo"
            style="@style/NumButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/two" />

        <Button
            android:id="@+id/buttonThree"
            style="@style/NumButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/three" />

        <Button
            android:id="@+id/buttonMinus"
            style="@style/ActionButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/minus" />

        <Button
            android:id="@+id/buttonPoint"
            style="@style/NumButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/point" />

        <Button
            android:id="@+id/buttonZero"
            style="@style/NumButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/zero" />

        <Button
            android:id="@+id/buttonBack"
            style="@style/NumButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/back" />

        <Button
            android:id="@+id/buttonRavno"
            style="@style/ActionButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/ravno" />

    </GridLayout>

</LinearLayout>
